--- a/proj1/index.html
+++ b/proj1/index.html
@@ -1,69 +1,3 @@
-<!-- <html>
-	<head>
-	</head>
-	<body>
-		<h1>
-			Project 1: Rasterizer
-		</h1>
-			<p>
-				<img src="images/lion.png" alt="rasterized lion" width="800px" align="middle"/>
-			</p>
-		<h2>
-			Overview
-		</h2>
-		<h2>
-			Task 1: Drawing Single-Color Triangles
-		</h2>
-			<p>
-				Triangles are rasterized by sampling across the pixels of the framebuffer. The simplest approach, which is how we implemented task 1, is to sample the point at the center of each pixel. We check if the point is within the triangle we are rasterizing, and if so, fill in the whole corresponding pixel with the color.
-			</p>
-			<p>
-				To check if a sample point is within the triangle, we do three line tests. In 2D space, a line can be thought of as something that separates the plane into two halves. If the line is defined with a standard equation L(x, y) = Ax + By + C, the two halves are separated by whether the line equation is greater than 0, or less than 0. (And when it is equal to 0, we are on the line.)
-			</p>
-			<p>
-				We can create three lines from each pairing of the three points of a triangle. If the point is always on the >= 0 side of the line, or if it’s always on the <= 0 side of the line, then we know it must be in the triangle and thus the pixel should be filled with the given color.
-			</p>
-			<p>
-				One optimization we made was to only sample points on pixels that create a bounding box around the triangle we are rasterizing. This way, we don’t sample every pixel in the framebuffer. Using the three corner coordinates of the triangle, we calculate the minimum and maximum x and y coordinates that would contain the triangle, and then only sampled points within that range.
-			</p>
-		<h2>
-			Task 2: Antialiasing by Supersampling
-		</h2>
-			<p>
-				Supersampling is useful because it gets rid of jaggies! At least, it diminishes the really bad ones. Lines are much sharper with supersampled rasterization, and the triangles that are rendered have a cleaner look.
-			</p>
-			<p>
-				The supersampling algorithm is very similar to the original triangle rasterizer, except for two big changes: how points are sampled within a pixel, and how the color that eventually fills the pixel is determined. Due to these changes, some other functions and data structures were used to help.
-			</p>
-			<p>
-				We iterate through the pixels in the bounding box of the triangle as usual. For every pixel we are on, we take n samples within the pixel instead of just one sample at the center of the pixel (n being the sample_rate). The samples are distributed evenly over the pixel, so there is another set of for loops sampling each of those points within a certain pixel. Now that the number of samples has increased by a factor of sample_rate times, we store the colors at each sample point in a sample_buffer Vector that has this increased size. This is different from how we just called fill_pixel for simple triangle rasterization.
-			</p>
-			<p>
-				Now to draw to the actual framebuffer, the work is done in the resolve_to_framebuffer function. For every pixel that needs to be drawn, we average the colors stored in the corresponding sample buffer for all the points that were sampled in that pixel. Then this averaged out color is what the pixel color is set to. With this change to how the sample_buffer is used, we also edited the fill_pixel function so that it still draws lines and points correctly even with supersampling.
-			</p>
-			<p>
-				Changes to the rasterization pipeline: We made it so that supersampling only happens when triangles are rasterized, not lines and points. When redraw is called to draw the lines for the square boundary on the picture, it won’t be fading away as the sampling rate goes up. Also, triangles are only drawn to the framebuffer once the entire triangle has been rasterized and is ready to be drawn (i.e. when resolve_to_framebuffer is called) and now directly as the triangle is being rasterized. This way background and foreground images stay cleanly separated.
-			</p>
-		<h2>
-			Task 3: Transforms
-		</h2>
-			<p>
-				I rotated cubeman’s arms so that it looks like he is holding one hand at his waist and waving with the other hand. To make the bending arms look a bit more natural, those rotated forearm rectangles were also translated up and down and to the sides.
-			</p>
-		<h2>
-			Task 4: Barycentric coordinates
-		</h2>
-			<p>
-				Barycentric coordinates are a coordinate system based on the vertices of a triangle. It provides a way to check if a point is within a triangle, and a way to linearly interpolate across the triangle. This linear interpolation isn’t just limited to position coordinates – it can be used to interpolate anything across a triangle, including color. This is what results in the lovely gradient we see in test7.svg, and also in these example triangles with three distinct colors at each corner:
-			</p>
-		<h2>
-			Task 5: &quot;Pixel sampling&quot; for texture mapping
-		</h2>
-		<h2>
-			Task 6: &quot;Level sampling&quot; with mipmaps for texture mapping
-		</h2>
-	</body> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -151,7 +85,7 @@
 			<li class="nav-item"><a class="nav-link" href="#idocs_sidebar">Task 3: Transforms</a></li>
 			<li class="nav-item"><a class="nav-link" href="#idocs_footer">Task 4: Barycentric coordinates</a></li>
 			<li class="nav-item"><a class="nav-link" href="#idocs_box_layout">Task 5: &quot;Pixel sampling&quot; for texture mapping</a></li>
-			<li class="nav-item"><a class="nav-link" href="#idocs_box_layout">Task 6: &quot;Level sampling&quot; with mipmaps for texture mapping</a></li>
+			<li class="nav-item"><a class="nav-link" href="#idocs_content">Task 6: &quot;Level sampling&quot; with mipmaps for texture mapping</a></li>
           </ul>
         </li>
       </ul>
@@ -196,7 +130,17 @@
 		============================ -->
         <section id="idocs_navbar">
           <h2>Task 2: Antialiasing by Supersampling</h2>
-		  <p>TODO</p>
+		  <p>Adding supersampling will reduce aliasing, or at least diminish the look of the jagged lines. The lines are much sharper with supersampled rasterization, and the triangles that are rendered have a cleaner look.</p>
+		  <p>The supersampling algorithm is very similar to the original triangle rasterizer, except for two big changes: how points are sampled within a pixel, and how the color that eventually fills the pixel is determined. Due to these changes, some other functions and data structures were used to help.</p>
+		  <p>For our implementation, we iterate through the pixels in the bounding box of the triangle as usual. For every pixel we are on, we take n samples within the pixel instead of just one sample at the center of the pixel (n being the sample_rate). The samples are distributed evenly over the pixel, so there is another set of for loops sampling each of those points within a certain pixel. Now that the number of samples has increased by a factor of sample_rate times, we store the colors at each sample point in the sample_buffer array. The sample buffer size is also changed to account for supersampling, where it’s size is a result of sample_rate * width * height. This is different from how we just called fill_pixel for simple triangle rasterization.</p>
+		  <p>Now to draw to the actual framebuffer, the work is done in the resolve_to_framebuffer function. For every pixel that needs to be drawn, we average the colors stored in the corresponding sample buffer for all the points that were sampled in that pixel. Then this averaged color is what the pixel color is set to. We did this by setting the corresponding color in the rgb_framebuffer_target array and accounted for the difference in dimension between the sample_buffer and the rgb_frambuffer. With this change to how the sample_buffer is used, we also edited the fill_pixel function so that it still draws lines and points correctly even with supersampling by having it modify the sample_buffer directly.</p>
+		  <p>Specifically, these were the changes made to the original rasterizing pipeline:</p>
+		  <ul>
+		  	<li>The sample_buffer is resized to be larger whenever the sample_rate is changed.</li>
+		  	<li>We made it so that supersampling will mainly affect the  triangles that are rasterized, not lines and points. When redraw is called to draw the lines for the square boundary on the picture, it won’t be fading away as the sampling rate goes up.</li>
+		  	<li>Triangles are only drawn to the framebuffer once the entire triangle has been rasterized and is ready to be drawn (i.e. when resolve_to_framebuffer is called) and now directly as the triangle is being rasterized. This way, the background and foreground images stay cleanly separated.</li>
+		  </ul>
+		  <p>As you can see in the tip of the red triangle zoomed in, supersampling allows the edge to be more clearly defined and less jagged. As we increase the sampling_rate from 1 to 4 to 9 to 16, it gets better.</p>
 		</section>
 
 		<hr class="divider">
@@ -204,8 +148,8 @@
 		<!-- Sidebar
 		============================ -->
         <section id="idocs_sidebar">
-          <h2>Task 3</h2>
-          <p>TODO</p>
+          <h2>Task 3: Transforms</h2>
+          <p>I rotated cubeman’s arms so that it looks like he is holding one hand at his waist and waving with the other hand. To make the bending arms look a bit more natural, those rotated forearm rectangles were also translated up and down and to the sides.</p>
         </section>
 		
         <hr class="divider">
@@ -213,8 +157,8 @@
         <!-- Footer
 		============================ -->
         <section id="idocs_footer">
-          <h2>Task 4</h2>
-          <p>TODO</p>
+          <h2>Task 4: Barycentric coordinates</h2>
+          <p>Barycentric coordinates are a coordinate system based on the vertices of a triangle. It provides a way to check if a point is within a triangle, and a way to linearly interpolate across the triangle. This linear interpolation isn’t just limited to position coordinates – it can be used to interpolate anything across a triangle, including color. This is what results in the lovely gradient we see in test7.svg, and also in these example triangles with three distinct colors at each corner:</p>
         </section>
         
 		<hr class="divider">
@@ -222,9 +166,24 @@
 		<!-- Box Layout Style
 		============================ -->
         <section id="idocs_box_layout">
-          <h2>Task 5</h2>
+          <h2>Task 5: "Pixel sampling" for texture mapping</h2>
           <div>
-            <p>TODO</p>
+            <p>Pixel sampling is a process that converts a coordinate to a texture coordinate, thereby mapping a pixel to the texture map. Breaking this down, these were the general steps that were used to find the texture map coordinate: </p>
+            <ul>
+            	<li>For each rasterized screen sample (or their subpixels if we add in supersampling), we want to evaluate their barycentric coordinates, relative to the vertices of the triangle. From a geometric perspective, this can be seen as finding the proportional distance away from the triangle vertices.</li>
+            	<li>We can then find the texture coordinate with the barycentric coordinates by multiplying alpha, beta and gamma with the vertices of the triangle on the texture map (effectively applying the equation of (x, y) = (alpha * A) + (beta * B) + (gamma * C)) and then scaling it by the size of the mipmap level (which at this stage, is just 0).</li>
+            	<li>Now that we have our corresponding texture map coordinate, we can use one of our pixel sampling methods, nearest or bilinear, to get the information we want from the texture map.</li>
+            </ul>
+            <p><strong>Nearest sampling</strong> involves finding the closest pixel on the texture map relative to our current texture coordinate. This effectively means we round to obtain that nearest pixel. For our implementation of this sampling method, we scaled the coordinates by the (width - 1) and (height - 1) of the texture map inside the function to get the texture coordinate the main reason we decremented the height and width by 1 was to account for indexing). We then rounded it to the nearest pixel. This gets us the desired texture that we want to use.</p>
+            <p><strong>Bilinear sampling</strong>, on the other hand, can be interpreted as interpolating or “averaging” the colors between the four pixels around our texture coordinate. So instead of using one pixel in bilinear sampling, we rely on four to find the texture we want to return. For this implementation, we started out similarly to nearest sampling, where we had to scale by the width and height of the mipmap. However, by using the floor and ceil function, we then calculated the horizontal and vertical offset, specifically the horizontal and vertical difference from the four nearest points. We then grabbed the associated texture for each of the four nearest points and interpolated them (two times horizontally, and one time vertically), which resulted in the desired texture.</p>
+            <p>Images:</p>
+            <ul>
+            	<li>Top Left: Nearest Sampling, Sampling Rate 1</li>
+            	<li>Bottom Left: Nearest Sampling, Sampling Rate 16</li>
+            	<li>Top Right: Bilinear, Sampling Rate 1</li>
+            	<li>Bottom Right: Bilinear Sampling, Sampling Rate 16</li>
+            </ul>
+            <p>To compare between the different images, we zoomed in on an island. Comparing between both sampling methods and sampling rate, we first look at both methods when they’re sampled at a rate of 1 pixel. With an up close shot, we can see that with nearest sampling, there’s a bit more color variation than there is in bilinear sampling. In other words, if we were to focus on one pixel, there would be more color variation around it. The same can be said with a sampling rate of 16, so with bilinear sampling, overall, we tend to see “smoother” or more blended pixels and lines (and with the image above, it creates a more smooth map). This difference becomes more apparent when we’re working with sharp lines and especially with not as many colors - since bilinear sampling “averages” out the color, it becomes more distinct which sampling method is which based on the coloration of individual pixels. </p>
           </div>
         </section>
 		
@@ -233,8 +192,29 @@
 		<!-- Content
 		============================ -->
         <section id="idocs_content">
-          <h2>Task 6</h2>
-          <p>TODO</p>
+          <h2>Task 6: "Level sampling" with mipmaps for texture mapping</h2>
+          <p>Level sampling is a process that refers to sampling from mipmaps, which can be thought of as different versions of a texture map where each version has some varying resolution or detail. Generally speaking, the higher you go up in mipmap levels, the lower the resolution becomes (and vice versa). With level sampling, we’re able to pick and choose which resolution we want to show for a certain pixel.</p>
+          <p>Our implementation of level sampling was done in rasterize_textured_triangle. The overall structure of it was similar to what was done in previous methods, rasterize_triangle and rasterize_interpolated_color_triangle. The main process is as follows: </p>
+          <ul>
+          	<li>For each rasterized screen sample (or their subpixels if supersampling was included), we calculated the barycentric coordinates for three points: (x, y), (x + 1), (x, y + 1). The main reason for this is because we wanted to apply the formula of </li>
+          	<li>By calculating the barycentric coordinates of those three points, we could obtain the derivatives as stated in the formula. The derivative can be thought of as an instantaneous rate of change, so once we computed the barycentric coordinates and found a corresponding point on the texture map, we could subtract them to obtain the derivative. More specifically, let’s say the vector v1 represents the point on the texture map of (x, y), v2 represents it for (x + 1, y) and v3 and represents it for (x, y + 1), then v2 - v1 and v3 - v1 will give us the needed derivatives.</li>
+          	<li>Once inside the get_level function, we scaled by the width and height of the mipmap accordingly, and then applied the formula to find the level. This involved calculating the expressions under the square root, which is finding the norm or magnitude of those vectors, applying the square root, taking the max of it, and then finding the log base 2 of it. And finally, we would get our desired mipmap level.</li>
+          </ul>
+          <p>From here, we needed to get our desired texture point from the mipmap, and the means to get it was dependent on the type of level sampling we used:</p>
+          <ul>
+          	<li><strong>Always level 0:</strong> This means we would always sample from the lowest level, or level 0, where it was full resolution. With this choice, we would pixel sample normally, as we had done in Task 5. </li>
+          	<li><strong>Nearest D (nearest level):</strong> This involved choosing the level that was considered the closest. Since there was a certain limit on the valid choices of mipmap level, we had to clamp down on the valid choices (i.e. if the calculated level was less than 0, we set the level to 0 and vice versa if it was greater than the size of the mipmap). We would then pass in the closest level into the pixel sampling functions that were implemented in Task 5. </li>
+          	<li><strong>Linear interpolation:</strong> This choice involved “interpolation” of the levels. Given the calculated level, we would want to find the level that is directly above it and directly below it. As we’ve done in the nearest sample, we also want to clamp down on the level so they’re both still valid mipmap levels. Finally, depending on the type of pixel sampling, both of the levels would be passed into the chosen pixel sampling functions and the results would be interpolated. </li>
+          </ul>
+          <p>Now, there are three available methods we can use to create our image, with each method having its own tradeoffs. With level sampling, we use a significant more amount of memory, since we need to store the different levels. But in turn, it produces notable results for anti-aliasing and is faster than supersampling. Pixel sampling, on the other hand, doesn’t have as much memory overhead and tends to be faster compared to other methods, but can lead to more rendering artifacts. Depending on the pixel sampling method, bilinear can be slower than nearest pixel sampling. Finally, supersampling is the most expensive among the three, in terms of memory and speed, but it also significantly reduces aliasing. </p>
+          <p>Example:</p>
+          <ul>
+          	<li>Top Left: L_Zero and P_Nearest</li>
+          	<li>Bottom Left: L_Zero and P_Linear</li>
+          	<li>Top Right: L_Nearest and P_Nearest</li>
+          	<li>Bottom Right: L_Nearest and P_Linear</li>
+          </ul>
+          <p>Looking at the images with varying level sampling and pixel sampling, there is a notable difference between all of them. With just level zero and nearest pixel sampling, we result in an image that has more aliasing than the other images. Level zero and bilinear pixel sampling reduces the aliasing significantly. With nearest level sampling, it smooths out the images too, with a combination of nearest level and bilinear pixel sampling producing the most smooth image (with the edges more “blurred” out).</p>
         </section>
 		  
   
