--- a/proj1/index.html
+++ b/proj1/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-<link href="assets/images/favicon.png" rel="icon" />
-<title>Documentation | Your ThemeForest item Name</title>
+<link href="assets/images/diamond.png" rel="icon" />
+<title>Project 1</title>
 <meta name="description" content="Your ThemeForest item Name and description">
 <meta name="author" content="harnishdesign.net">
 
@@ -54,12 +54,12 @@
 		<span class="text-2 ml-2">Jasmine Lin and Jennifer Prince</span> 
         <!-- Logo End -->
 
-        <ul class="social-icons social-icons-sm ml-lg-2 mr-2">
+       <!--  <ul class="social-icons social-icons-sm ml-lg-2 mr-2">
           <li class="social-icons-twitter"><a data-toggle="tooltip" href="http://www.twitter.com/harnishdesign/" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
           <li class="social-icons-facebook"><a data-toggle="tooltip" href="http://www.facebook.com/harnishdesign/" target="_blank" title="" data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
           <li class="social-icons-dribbble"><a data-toggle="tooltip" href="http://www.dribbble.com/harnishdesign/" target="_blank" title="" data-original-title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
         </ul>
-      </div>
+      </div> -->
     </nav>
     <!-- Navbar End --> 
   </header>
