add link to bottom of webpage

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -86,6 +86,7 @@
 			<li class="nav-item"><a class="nav-link" href="#idocs_footer">Task 4: Barycentric coordinates</a></li>
 			<li class="nav-item"><a class="nav-link" href="#idocs_box_layout">Task 5: &quot;Pixel sampling&quot; for texture mapping</a></li>
 			<li class="nav-item"><a class="nav-link" href="#idocs_content">Task 6: &quot;Level sampling&quot; with mipmaps for texture mapping</a></li>
+			<li class="nav-item"><a class="nav-link" href="#idocs_link">Website Link</a></li>
           </ul>
         </li>
       </ul>
@@ -268,6 +269,13 @@
 			  </div>
 			</div>
           <p>Looking at the images with varying level sampling and pixel sampling, there is a notable difference between all of them. With just level zero and nearest pixel sampling, we result in an image that has more aliasing than the other images. Level zero and bilinear pixel sampling reduces the aliasing to a certain extent. With nearest level sampling, it smooths out the images too, with a combination of nearest level and bilinear pixel sampling producing the most smooth image (with the edges more “blurred” out).</p>
+        </section>
+
+        <hr class="divider">
+        
+        <section id="idocs_link">
+        	<p>Here is the link to this website: <a href="https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html" > link</a></p>
+        	<p><a href="https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html"> https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html</a></p>
         </section>
 		  
   
