--- a/proj1/index.html
+++ b/proj1/index.html
@@ -104,7 +104,7 @@
         <section id="idocs_layout">
           <h2>Project 1: Overview</h2>
           <p><img src="images/lion.png" alt="rasterized lion" width="800px" align="middle"/></p>
-          <p class="lead mb-5">In this project, we implemented a simple rasterizer that can draw SVG components. The rasterizer implements several interesting features, including pixel sampling, transforms, and texture mapping. We were also able to use those features in combination with each other, resulting in slightly different images depending on the method used. One of the most interesting things we learned was the huge difference between using different mipmap levels. For example, sampling at mipmap level 0 compared to level 1 produced signifcantly different results, more so than expected, as it was very clear how the image changed when we sampled at different resolutions. This becaome more apparent as we increased our level number. </p>
+          <p class="lead mb-5">In this project, we implemented a simple rasterizer that can draw SVG components. The rasterizer implements several interesting features, including pixel sampling, transforms, and texture mapping. We were also able to use those features in combination with each other, resulting in slightly different images depending on the method used. One of the most interesting things we learned was the huge difference between using different mipmap levels. For example, sampling at mipmap level 0 compared to level 1 produced signifcantly different results, more so than expected, as it was very clear how the image changed when we sampled at different resolutions. This became more apparent as we increased our level number. </p>
         </section>
 		
 		
@@ -272,7 +272,7 @@
         </section>
 
         <hr class="divider">
-        
+
         <section id="idocs_link">
         	<p>Here is the link to this website: <a href="https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html" > link</a></p>
         	<p><a href="https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html"> https://cal-cs184-student.github.io/proj-webpage-thejjdiamonds/proj1/index.html</a></p>
